# tedge-dot

./: .dockerignore  .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile.package  README.md  TODO.md  docker-compose.simulators.yaml  justfile
.github/workflows/: ci.yaml  cloud-e2e.yaml  publish-simulators.yaml  release-c.yaml  release.yaml
cloud/_shared/: FieldbusLibrary.py
cloud/modbus/: Dockerfile.tedge  docker-compose.yaml  modbus.toml  requirements.txt
cloud/modbus/tests/: fieldbus_c8y.robot  modbus_c8y.robot  test_fieldbus_import.sh
connectors/: README.md
connectors/_shared/: MqttClient.py  requirements.txt
connectors/canbus/: Dockerfile.connector  conformance.toml  connector.toml  docker-compose.yaml  entrypoint.sh
connectors/canbus/packaging/: canbus.toml
connectors/canbus/sim/: Dockerfile  requirements.txt  simulator.py  test.dbc
connectors/canbus/tests/: canbus_e2e.robot
connectors/canopen/: Dockerfile.connector  conformance.toml  connector.toml  docker-compose.yaml  entrypoint.sh
connectors/canopen/packaging/: canopen.toml
connectors/canopen/sim/: Dockerfile  requirements.txt  simulator.py
connectors/canopen/tests/: canopen_e2e.robot
connectors/j1939/: conformance.toml  docker-compose.yaml
connectors/j1939/sim/: Dockerfile  simulator.py
connectors/modbus/: Dockerfile.connector  conformance.toml  connector.toml  docker-compose.yaml  entrypoint.sh
connectors/modbus/conformance/: connector.toml  seed.json
connectors/modbus/sim/: Dockerfile
connectors/modbus/tests/: modbus_e2e.robot
connectors/opcua/: Dockerfile.connector  conformance.toml  connector.toml  docker-compose.yaml  entrypoint.sh  requirements.txt
connectors/opcua/conformance/: connector.toml  seed.json
connectors/opcua/sim/: Dockerfile  (+1 more)
connectors/profibus/: Dockerfile.connector  Dockerfile.e2e  conformance.toml  connector.toml  docker-compose.yaml  entrypoint-e2e.sh  entrypoint.sh
crates/connector-canbus/: Cargo.toml
crates/connector-canbus/src/: config.rs  lib.rs
crates/connector-canbus/tests/: integration_test.rs
crates/connector-canopen/: Cargo.toml
crates/connector-canopen/src/: config.rs  lib.rs
crates/connector-canopen/tests/: integration_test.rs
crates/connector-modbus/: Cargo.toml
crates/connector-modbus/src/: config.rs  lib.rs
crates/connector-modbus/tests/: integration.rs  tcp_integration.rs
crates/connector-opcua/: Cargo.toml
crates/connector-opcua/src/: config.rs  lib.rs
crates/connector-opcua/tests/: subscription_integration.rs
crates/connector-profibus/: Cargo.toml
crates/connector-profibus/src/: config.rs  lib.rs
crates/connector-profibus/tests/: integration.rs
crates/ot-conformance/: Cargo.toml
crates/ot-conformance/src/: broker.rs  host.rs  layer1.rs  layer2.rs  layer3.rs  lib.rs  main.rs  manifest.rs  report.rs
crates/ot-conformance/src/sim/: mod.rs  modbus.rs  opcua.rs  proxy.rs
crates/ot-conformance/tests/: all_manifests.rs  modbus_conformance.rs  opcua_conformance.rs
crates/sdk/: Cargo.toml
crates/sdk/conformance/: vectors.json
crates/sdk/fuzz/: Cargo.toml
crates/sdk/fuzz/fuzz_targets/: config_toml.rs  decode_primitive.rs  sample_envelope.rs  transform.rs
crates/sdk/src/: config.rs  conformance.rs  connector.rs  decode.rs  lib.rs  model.rs  runtime.rs
crates/sdk/tests/: golden_vectors.rs  properties.rs
demo/: README.md  docker-compose.yaml  j1939.dbc
demo/config/: canbus.toml  canopen.toml  j1939.toml  modbus.toml  opcua.toml  profibus.toml
doc/: README.md  roadmap.md  testing.md
doc/community/: community-model.md
doc/conformance/: conformance-suite.md
doc/connectors/: _template-connector-spec.md  canbus-connector-spec.md  modbus-connector-spec.md
doc/contract/: asyncapi.yaml  ot-connector-contract.md
doc/flows/: README.md
doc/migration/: migration-guide.md  modbus-plugin-gap-analysis.md
doc/rfc/: 0001-ot-connector-architecture.md  0002-cloud-fieldbus-integration.md
doc/sdk/: connector-sdk.md
doc/upstream/: async-opcua-stranded-sample.md
e2e-c8y/: Dockerfile.tedge  docker-compose.yaml  modbus.toml  requirements.txt
e2e-c8y/params/: ot-registration.params.toml
e2e-modbus/: Dockerfile.connector  connector.toml  docker-compose.yaml
e2e-modbus/tests/: modbus_e2e.robot
e2e-opcua/: Dockerfile.connector  docker-compose.yaml
e2e-opcua/simulator/: Dockerfile  requirements.txt
e2e-opcua/tests/: opcua_e2e.robot
examples/: README.md  modbus-local.toml  opcua-local.toml
flows/: README.md  test-flows.sh
flows/ot-alarm/: flow.toml  main.js  params.toml.template
flows/ot-command-forward/: flow.toml  main.js  params.toml.template
flows/ot-command-result/: flow.toml  main.js  params.toml.template
flows/ot-event/: flow.toml  main.js  params.toml.template
flows/ot-measurement/: flow.toml  main.js  params.toml.template
flows/ot-registration/: flow.toml  main.js  params.toml.template
images/tedge/: Dockerfile
operations/: README.md  c8y-fieldbus-import  c8y_ModbusConfiguration  c8y_ModbusDevice  c8y_SerialConfiguration  c8y_SetCoil  c8y_SetRegister
packaging/: tedge-dot-supervisor.sh  tedge-dot.service
packaging/config/: canbus.toml  canopen.toml  modbus.toml  opcua.toml
packaging/scripts/: postinstall.sh  postremove.sh  preremove.sh
poc-c/: CMakeLists.txt  README.md
poc-c/ci/: smoke.sh
poc-c/connectors/canbus/: connector_canbus.c  dbc.c  dbc.h
poc-c/connectors/canopen/: connector_canopen.c
poc-c/connectors/j1939/: CMakeLists.txt  Dockerfile  README.md  connector_j1939.c  harness.c
poc-c/connectors/j1939/patches/: apply_tp_capture.py
poc-c/connectors/j1939/scripts/: fetch-lib.sh  send-vectors.sh  setup-vcan.sh
poc-c/connectors/modbus/: connector_modbus.c
poc-c/connectors/opcua/: connector_opcua.c
poc-c/connectors/profibus/: connector_profibus.c
poc-c/packaging/: nfpm.yaml
poc-c/packaging/config/: profibus.toml
poc-c/sdk/include/tedge_dot/: config.h  connector.h  decode.h  model.h  runtime.h
poc-c/sdk/src/: config.c  decode.c  envelope.c  factory.c  model.c  runtime.c
poc-c/src/: main.c
poc-c/tests/: golden.c
src/: main.rs
(+27 files in other folders)
