[package]
name = "connector-canopen"
version.workspace = true
edition.workspace = true
description = "CANopen connector module for thin-edge.io OT connectors (Linux SocketCAN + zencan-client SDO)"
license.workspace = true
repository.workspace = true

[dependencies]
tedge-dot-sdk = { path = "../sdk" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
time = { version = "0.3", features = ["std"] }

[target.'cfg(target_os = "linux")'.dependencies]
zencan-client = { version = "0.0.4", features = ["socketcan"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tedge-dot-sdk = { path = "../sdk" }
toml = "0.8"
tempfile = "3"
