[package]
name = "connector-modbus"
version = "0.1.0"
edition = "2021"
description = "Reference Modbus connector module (TCP + RTU) for thin-edge.io OT connectors"
license = "Apache-2.0"

[dependencies]
tedge-dot-sdk = { path = "../sdk" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net"] }
tokio-modbus = { version = "0.16", default-features = false, features = ["tcp", "rtu"] }
tokio-serial = "5.4"
time = { version = "0.3", features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-modbus = { version = "0.16", default-features = false, features = ["tcp", "rtu", "tcp-server"] }
tedge-dot-sdk = { path = "../sdk" }
toml = "0.8"
