[package]
name = "connector-opcua"
version = "0.1.0"
edition = "2021"
description = "OPC-UA connector module for thin-edge.io OT connectors"
license = "Apache-2.0"

[dependencies]
tedge-dot-sdk = { path = "../sdk" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
async-opcua = { version = "0.18", default-features = false, features = ["client"] }
time = { version = "0.3", features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
