[package]
name = "connector-opcua"
version.workspace = true
edition.workspace = true
description = "OPC-UA connector module for thin-edge.io OT connectors"
license.workspace = true
repository.workspace = true

[dependencies]
tedge-dot-sdk = { path = "../sdk" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
async-opcua = { version = "0.18", default-features = false, features = ["client"] }
time = { version = "0.3", features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
# The in-process OPC-UA test server (integration tests only; MPL-2.0, dev-only).
async-opcua = { version = "0.18", default-features = false, features = ["client", "server"] }
tedge-dot-sdk = { path = "../sdk" }
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
