[package]
name = "connector-profibus"
version.workspace = true
edition.workspace = true
description = "PROFIBUS-DP connector module for thin-edge.io OT connectors"
license.workspace = true
repository.workspace = true

[dependencies]
tedge-dot-sdk = { path = "../sdk" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
profirust = { version = "0.6", features = ["serialport"] }
libc = "0.2"
time = { version = "0.3", features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tedge-dot-sdk = { path = "../sdk" }
toml = "0.8"
