[package]
name = "tedge-dot-sdk"
version.workspace = true
edition.workspace = true
description = "SDK (runtime + Connector trait + shared model and decode helpers) for thin-edge.io OT connectors"
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
thiserror = "1"
tracing = "0.1"
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
rumqttc = "0.24"

[dev-dependencies]
proptest = "1"
